# pic-upv-lab0

./: .gitignore  010_MODESOLVER_Student.ipynb  010_MODESOLVER_v2025_Student.ipynb  020_COUPLERS_v2025_Student.ipynb  LabBook_010.pptx  LabBook_020.pptx  main.py  pyproject.toml
